Små ändringar för bilder.

--- a/Css-case/bagarenochkocken.html
+++ b/Css-case/bagarenochkocken.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="mystyle.css">
@@ -10,12 +10,12 @@
 	<div class="header">
 		<div class="topheadernav"> </div>
 		<div class = "container" id = "headercontainer">
-			<img src="C:\Users\Administrator\Downloads\31233_6a6bacac.png" alt="Logo" style="width:115px;height:164px;">
+			<img src="C:\Users\fridah\Desktop\Trainee 2015\Css-case\Images\31233_6a6bacac.png" alt="Logo" style="width:115px;height:164px;">
 				<div class ="topheadernavtext">
 					<p> Köksredskap & design på nätet</p>
 				</div>
 				<div class = "imagetopheader">
-					<img src="C:\Users\Administrator\Downloads\31285_6a6bacac.png" alt = "årets e-handlare" style="width:137px;height:50px;" id="aretsehandlare">
+					<img src="C:\Users\fridah\Desktop\Trainee 2015\Css-case\Images\31285_6a6bacac.png" alt = "årets e-handlare" style="width:137px;height:50px;" id="aretsehandlare">
 				</div>
 				<div class ="listintopheadernavcontainer">
 					<ul class = "listintopheadernav">
@@ -27,7 +27,7 @@
 					</ul>
 				</div>
 				<div class ="facebookiconcontainer">
-					<img src="C:\Users\Administrator\Downloads\facebookliten.jpg" alt = "facebook like" style="width:70px;height:30px;" id="facebookiconimage">
+					<img src="C:\Users\fridah\Desktop\Trainee 2015\Css-case\Images\facebookliten.jpg" alt = "facebook like" style="width:70px;height:30px;" id="facebookiconimage">
 				</div>
 
 				<div class ="smallercontainerheader">
@@ -46,7 +46,7 @@
 						</div>
 						<div class ="shoppingcartcontainer">
 							<div class ="shoppingcartcontainerleft">
-							<img src="C:\Users\Administrator\Downloads\14374729414917.png" alt = "shopping cart" style="width:30px;height:50px;">
+							<img src="C:\Users\fridah\Desktop\Trainee 2015\Css-case\Images\14374729414917.png" alt = "shopping cart" style="width:30px;height:50px;">
 							</div>
 							<div class ="shoppingcartcontainerright">
 								<a href="#tillkassan">TILL KASSAN</a>
@@ -82,7 +82,7 @@
 		<div class = "container">
 			<div class = "kampanj">
 				<div class = "kampanjbild">
-					<img src="C:\Users\Administrator\Downloads\be197e84c00a44b5c333c79207f2c5f7.jpg" alt="Kampanjsbild" style="width:800px;height:400px;">
+					<img src="C:\Users\fridah\Desktop\Trainee 2015\Css-case\Images\be197e84c00a44b5c333c79207f2c5f7.jpg" alt="Kampanjsbild" style="width:800px;height:400px;">
 				</div>
 				<div class ="kampanjtext">
 					<h2>Kampanj </h2>
@@ -94,14 +94,14 @@
 			</div>
 			<div class = "navpicturecontainer">
 				<div class ="picturesnav">
-					<a href="#image1"><img src="C:\Users\Administrator\Downloads\31288_b52b19c9.jpg" alt="navpicture" style="width:273px;height:273px;"></a>
-					<a href="#image2"><img src="C:\Users\Administrator\Downloads\35700_b52b19c9.jpg" alt="navpicture" style="width:273px;height:273px;"></a>
-					<a href="#image3"><img src="C:\Users\Administrator\Downloads\37473_b52b19c9.jpg" alt="navpicture" style="width:273px;height:273px;"></a>
-					<a href="#image4"><img src="C:\Users\Administrator\Downloads\37529_f675bc22.jpg" alt="navpicture" style="width:273px;height:273px;"></a>
+					<a href="#image1"><img src="C:\Users\fridah\Desktop\Trainee 2015\Css-case\Images\31288_b52b19c9.jpg" alt="navpicture" style="width:273px;height:273px;"></a>
+					<a href="#image2"><img src="C:\Users\fridah\Desktop\Trainee 2015\Css-case\Images\35700_b52b19c9.jpg" alt="navpicture" style="width:273px;height:273px;"></a>
+					<a href="#image3"><img src="C:\Users\fridah\Desktop\Trainee 2015\Css-case\Images\37473_b52b19c9.jpg" alt="navpicture" style="width:273px;height:273px;"></a>
+					<a href="#image4"><img src="C:\Users\fridah\Desktop\Trainee 2015\Css-case\Images\37529_f675bc22.jpg" alt="navpicture" style="width:273px;height:273px;"></a>
 				</div>
 			</div>
 			<div class ="brands">
-				<img src="C:\Users\Administrator\Downloads\brands.png" alt="brands">
+				<img src="C:\Users\fridah\Desktop\Trainee 2015\Css-case\Images\brands.png" alt="brands">
 				<div class ="allbrandslink">
 					<a href="#allbrands">>ALLA VARUMÄRKEN</a>
 				</div>
