Slutliga ändringar i css html

--- a/Css-case/bagarenochkocken.html
+++ b/Css-case/bagarenochkocken.html
@@ -111,6 +111,40 @@
 
 			<h2>Populära produkter</h2>
 			</div>
+			<div class="popularproductslinks">
+				<a href="#popularproduct1">
+					<div class = "popularproductslinksblock">
+					</div>
+				</a>
+				<a href="#popularproduct2">
+					<div class = "popularproductslinksblock">
+					</div>
+				</a>
+				<a href="#popularproduct3">
+					<div class = "popularproductslinksblock">
+					</div>
+				</a>
+				<a href="#popularproduct4">
+					<div class = "popularproductslinksblock">
+					</div>
+				</a>
+				<a href="#popularproduct5">
+					<div class = "popularproductslinksblock">
+					</div>
+				</a>
+				<a href="#popularproduct6">
+					<div class = "popularproductslinksblock">
+					</div>
+				</a>
+				<a href="#popularproduct7">
+					<div class = "popularproductslinksblock">
+					</div>
+				</a>
+				<a href="#popularproduct8">
+					<div class = "popularproductslinksblock">
+					</div>
+				</a>
+			</div>
 
 
 		</div>
